kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adster-deployment             
  namespace: adster
spec:
  replicas: 3
  selector:
    matchLabels:
      app: adster-project
  template:
    metadata:
      labels:
        app: adster-project
    spec:
      containers:
        - name: adster-project-container
          image: hristijan12/adster:latest
          ports:
            - containerPort: 9090
