kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adster-project-service
  namespace: adster
spec:
  selector:
    app: adster-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
