kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adster-project-ingress                 
  namespace: adster
spec:
  rules:
    - host:         
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adster-project-service
                port:
                  number: 80
